--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script src="animar.js"></script>
 
   <div class="titulo-principal">
-    <h1>DICAS DE INTERCÂMBIO</h1>
+    <h1>Dicas de intercâmbio</h1>
     <p class="subtitulo titulo">Este site foi criado para te ajudar a planejar seu intercâmbio, oferecendo dicas valiosas. Seja você alguém que já está decidido ou ainda está em dúvida, confira nossas orientações e prepare-se para essa experiência incrível!</p>
   </div>
 
@@ -245,7 +245,7 @@
         <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
       </div>
       <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
-    </footer>
+    </footer>S
 
 </body>
 
