--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="caixa">
-      <h1>Sobre mim</h1>
+      <h1>About me</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -56,8 +56,8 @@
   </div>
 
   <div class="apresentacao">
-    <img class="img-inicio" src="Foto com bandeira.jpeg" alt="Imagem da criadora do site">
-    <p>Olá! Meu nome é Sibelly e tenho 18 anos. Em 2022, fui uma das participantes do <strong>Ganhando o Mundo 2ª
+    <img class="img-inicio esquerda" src="Foto com bandeira.jpeg" alt="Imagem da criadora do site">
+    <p class="direita">Olá! Meu nome é Sibelly e tenho 18 anos. Em 2022, fui uma das participantes do <strong>Ganhando o Mundo 2ª
         Edição</strong>, uma oportunidade única destinada a 100 alunos de escolas públicas do Paraná. Essa experiência
       me levou a um intercâmbio de três meses na deslumbrante Nova Zelândia. Desde os meus 11 anos, nutria o sonho de
       estudar no exterior, mas sabia que o caminho seria desafiador. Foi somente aos 15 anos, em 2022, que tudo mudou.
@@ -66,16 +66,9 @@
   </div>
 
   <div class="Depoimentos">
-    <h1>Depoimentos</h1>
+    <h1>Depoimento</h1>
 
     <div class="Depoimentos-instagram">
-      <blockquote>
-        <iframe
-          src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsibellyvitoria.antonio%2Fposts%2Fpfbid02x81UVcHVARkhDnvY7cdzH7cWRehu3TZQPPGitLiBSnzLKHsvpgBeSB2HcT9jdhgEl&show_text=true&width=500"
-          width="500" height="639" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-          allowfullscreen="true"
-          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-      </blockquote>
 
       <blockquote class="instagram-media"
         data-instgrm-permalink="https://www.instagram.com/reel/C6L0MJtAF2D/?utm_source=ig_embed&amp;utm_campaign=loading"
@@ -161,7 +154,8 @@
             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
             <a href="https://www.instagram.com/reel/C6L0MJtAF2D/?utm_source=ig_embed&amp;utm_campaign=loading"
               style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-              target="_blank">A post shared by Núcleo Regional de Educação de Londrina (@nrelondrina)</a></p>
+              target="_blank">A post shared by Núcleo Regional de Educação de Londrina (@nrelondrina)</a>
+          </p>
         </div>
       </blockquote>
       <script async src="//www.instagram.com/embed.js"></script>
@@ -187,7 +181,7 @@
       <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
       <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
     </div>
-    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
+    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2025</p>
   </footer>
 
 </body>
