--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
       </div>
       <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
-    </footer>S
+    </footer>
 
 </body>
 
