--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="caixa">
-      <h1>Bem-vindos</h1>
+      <h1>Welcome</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
