--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="caixa">
-      <h1>Welcome</h1>
+      <h1>Bem-vindos</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -227,8 +227,8 @@
       <h2 class="titulo">English Travel Game</h2>
       <iframe class="jogo" src="https://scratch.mit.edu/projects/867681896/embed" allowtransparency="true" width="800" height="490"
         frameborder="0" scrolling="no" allowfullscreen></iframe>
-      <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e pouca convivência com a <strong>lingua inglesa</strong>, um <strong>jogo
-        educativo</strong> e interativo para auxiliar estudantes e demais usuários que gostariam de realizar um intercâmbio de
+      <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e com pouca convivência com a <strong>lingua inglesa</strong>, um <strong>jogo
+        educativo</strong> e interativo que está em fase de construção no <em>Scratch</em> que auxilia estudantes e demais usuários que gostariam de realizar um intercâmbio de
         estudos ou realizar alguma viagem e que não tenham um bom domínio na língua inglesa para aprender e aprimorar o
         vocabulário e aprender com situações reais por meio o jogo.</p>
     </div>
@@ -241,10 +241,10 @@
         <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
             alt="Facebook"></a>
         <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+        <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
         <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
       </div>
-      <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
+      <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
     </footer>
 
 </body>
