--- a/nativos.html
+++ b/nativos.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="caixa">
-      <h1>Fale com nativos</h1>
+      <h1>Talk to natives</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -51,9 +51,6 @@
 
   <script src="animar.js"></script>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/QRULM9U5QXw?si=xvI8SZ233lhHItNU"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
+<h2>PÁGINA EM FASE DE CONSTRUÇÃO</h2>
 
 </body>
