--- a/prepare-se.html
+++ b/prepare-se.html
@@ -131,8 +131,12 @@
 
       <li class="topics">
         <h3>Aeroporto:</h3>
-        <p>Chegue mais cedo no aeroporto para fazer o check-in e veja qual é o seu portão de embarque. Fique atento
-          sobre todas as informações de seu voo, se caso foi cancelado ou irá atrasar.</p>
+        <p>Chegue mais cedo ao aeroporto para fazer o check-in e verificar o portão de embarque. Fique atento a todas as informações do voo, como possíveis cancelamentos ou atrasos.</p>
+        <p>Tenha seus documentos e passagens sempre à mão, seja em papel ou digital.</p>
+        <p>Compre um lanche ou leve algo de casa, já que as opções no aeroporto costumam ser caras.</p>
+        <p>Leve algo para se distrair enquanto aguarda, como um livro, música ou filme.</p>
+        <p>Use aplicativos da companhia aérea para acompanhar atualizações do voo em tempo real.</p>
+        <p>Se tiver voos de conexão, confira o tempo disponível entre eles e a localização dos portões.</p>
 
         <img src="aeroporto.gif" alt="Gif de um aeroporto">
 
@@ -148,10 +152,10 @@
       <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
           alt="Facebook"></a>
       <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
       <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
     </div>
-    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2025</p>
+    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
   </footer>
 </body>
 
