--- a/destinos.html
+++ b/destinos.html
@@ -62,10 +62,10 @@
         </figure>
         <p>A qualidade de vida é um dos motivos que mais chama atenção para quem se pergunta se um intercâmbio na
           Austrália vale a pena. Nesse sentido, é importante saber que o país tem um elevado Índice de Desenvolvimento
-          Humano (IDH), ficando em sexto lugar no ranking de IDH da Organização das Nações Unidas (ONU) em 2019.</p>
-        <p>A Austrália é um país incrivelmente vasto e diversificado localizado na região da Oceania. É o único país que
+          Humano (IDH), ficando em sexto lugar no ranking de IDH da Organização das Nações Unidas (ONU) em 2019. A
+          Austrália é um país incrivelmente vasto e diversificado localizado na região da Oceania. É o único país que
           ocupa um continente inteiro, oferecendo uma paisagem que varia desde desertos áridos até florestas tropicais
-          luxuriantes e praias de areia branca.
+          luxuriantes e praias de areia branca.</p>
 
         <p>A cultura australiana é uma mistura fascinante de influências indígenas e culturas de imigrantes de todo o
           mundo. Os aborígenes australianos têm uma história que se estende por milênios, com tradições culturais e
@@ -148,10 +148,10 @@
       <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
           alt="Facebook"></a>
       <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
       <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
     </div>
-    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023</p>
+    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
   </footer>
 </body>
 
