--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 
     <div class="jogo">
       <h2 class="titulo">English Travel Game</h2>
+      <h3>Fase de construção no Scratch</h3>
       <iframe class="jogo" src="https://scratch.mit.edu/projects/867681896/embed" allowtransparency="true" width="800" height="490"
         frameborder="0" scrolling="no" allowfullscreen></iframe>
       <p>Jogo criado com o intuito de ajudar pessoas que vão viajar, e com pouca convivência com a <strong>lingua inglesa</strong>, um <strong>jogo
