--- a/musica.html
+++ b/musica.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="caixa">
-      <h1>Escute músicas em inglês</h1>
+      <h1>Listen to songs in English</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -51,45 +51,7 @@
 
   <script src="animar.js"></script>
 
-  <h2>Músicas que recomendo:</h2>
-
-  <div class="musicas">
-
-    <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/track/4N5s8lPTsjI9EGP7K4SXzB?utm_source=generator" width="50%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <br>
-    <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/track/6TvxPS4fj4LUdjw2es4g21?utm_source=generator" width="50%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <br>
-    <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/track/3AJwUDP919kvQ9QcozQPxg?utm_source=generator" width="50%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-  </div>
-
-  <h2>Artistas</h2>
-
-  <div class="artistas">
-
-    <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/artist/0LcJLqbBmaGUft1e9Mm8HV?utm_source=generator" width="50%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <br>
-    <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/artist/4gzpq5DPGxSnKTe4SA8HAU?utm_source=generator" width="50%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <br>
-    <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/artist/6eUKZXaKkcviH0Ku9w2n3V?utm_source=generator" width="50%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <h2>PÁGINA EM FASE DE CONSTRUÇÃO</h2>
 
   </div>
 
