--- a/prepare-se.html
+++ b/prepare-se.html
@@ -131,12 +131,8 @@
 
       <li class="topics">
         <h3>Aeroporto:</h3>
-        <p>Chegue mais cedo ao aeroporto para fazer o check-in e verificar o portão de embarque. Fique atento a todas as informações do voo, como possíveis cancelamentos ou atrasos.</p>
-        <p>Tenha seus documentos e passagens sempre à mão, seja em papel ou digital.</p>
-        <p>Compre um lanche ou leve algo de casa, já que as opções no aeroporto costumam ser caras.</p>
-        <p>Leve algo para se distrair enquanto aguarda, como um livro, música ou filme.</p>
-        <p>Use aplicativos da companhia aérea para acompanhar atualizações do voo em tempo real.</p>
-        <p>Se tiver voos de conexão, confira o tempo disponível entre eles e a localização dos portões.</p>
+        <p>Chegue mais cedo ao aeroporto para fazer o check-in e verificar o portão de embarque. Fique atento a todas as informações do voo, como possíveis cancelamentos ou atrasos.Tenha seus documentos e passagens sempre à mão, seja em papel ou digital. Compre um lanche ou leve algo de casa, já que as opções no aeroporto costumam ser caras.</p>
+        <p>Leve algo para se distrair enquanto aguarda, como um livro, música ou filme. Use aplicativos da companhia aérea para acompanhar atualizações do voo em tempo real. Se tiver voos de conexão, confira o tempo disponível entre eles e a localização dos portões.</p>
 
         <img src="aeroporto.gif" alt="Gif de um aeroporto">
 
