--- a/sobre.html
+++ b/sobre.html
@@ -178,10 +178,10 @@
       <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
           alt="Facebook"></a>
       <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
+      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
       <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
     </div>
-    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2025</p>
+    <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
   </footer>
 
 </body>
