Criando pasta de fotos

--- a/destinos.html
+++ b/destinos.html
@@ -57,7 +57,7 @@
       <li class="destino">
         <h3>Austrália</h3>
         <figure>
-          <img src="Australia.jpg" alt="Imagem da cidade de Sydney na Australia">
+          <img src="fotos/Australia.jpg" alt="Imagem da cidade de Sydney na Australia">
           <figcaption>Sydney, Austrália</figcaption>
         </figure>
         <p>A qualidade de vida é um dos motivos que mais chama atenção para quem se pergunta se um intercâmbio na
@@ -82,7 +82,7 @@
       <li class="destino">
         <h3>Canadá</h3>
         <figure>
-          <img src="Canada.jpg" alt="Imagem da cidade de Toronto no Canadá">
+          <img src="fotos/Canada.jpg" alt="Imagem da cidade de Toronto no Canadá">
           <figcaption>Toronto, Canadá</figcaption>
         </figure>
         <p>O Canadá é um país imenso, com boas oportunidades e condições para os estudantes que desejam aprender inglês
@@ -97,7 +97,7 @@
       <li class="destino">
         <h3>Estados Unidos</h3>
         <figure>
-          <img src="EUA.jpg" alt="Imagem da cidade de Nova Iorque nos Estados Unidos">
+          <img src="fotos/EUA.jpg" alt="Imagem da cidade de Nova Iorque nos Estados Unidos">
           <figcaption>Nova Iorque, Estados Unidos</figcaption>
         </figure>
         <p>Um dos destinos mais cobiçados para intercâmbio é, sem dúvidas, os Estados Unidos. Como a língua inglesa é
@@ -112,7 +112,7 @@
       <li class="destino">
         <h3>Inglaterra</h3>
         <figure>
-          <img src="Inglaterra.jpg" alt="Imagem da cidade de Londres na Inglaterra">
+          <img src="fotos/Inglaterra.jpg" alt="Imagem da cidade de Londres na Inglaterra">
           <figcaption>Londres, Inglaterra</figcaption>
         </figure>
         <p>A experiência de estudar em território britânico é transformadora para qualquer pessoa, que além da imersão
@@ -126,7 +126,7 @@
       <li class="destino">
         <h3>Nova Zelândia</h3>
         <figure>
-          <img src="Nova_Zelandia.jpg" alt="Imagem da cidade de Auckland na Nova Zelândia">
+          <img src="fotos/Nova_Zelandia.jpg" alt="Imagem da cidade de Auckland na Nova Zelândia">
           <figcaption>Auckland, Nova Zelândia</figcaption>
         </figure>
         <p>A segurança é tão eficaz que a 14ª edição do Índice Global da Paz classificou a Nova Zelândia como o segundo
@@ -145,11 +145,11 @@
         by Sibelly</strong></h2>
     <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
     <div class="redes-sociais">
-      <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
+      <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="fotos/facebook.png"
           alt="Facebook"></a>
-      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
-      <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="fotos/instagram.png" alt="Instagram"></a>
+      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="fotos/tiktok.png" alt="Tiktok"></a>
+      <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="fotos/youtube.png" alt="YouTube"></a>
     </div>
     <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
   </footer>
