--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           inesperados. No entanto, esses desafios também fazem parte do processo de crescimento e amadurecimento.</p>
 
         <figure class="efeito-na-imagem1">
-        <img class="gif" src="airplane.gif" alt="gif de um avião">
+        <img class="gif" src="fotos/airplane.gif" alt="gif de um avião">
         <figcaption>Fonte: Gifer.</figcaption>
       </figure>
         <br>
@@ -98,7 +98,7 @@
       <blockquote class="active">
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Dilmar.jpeg" alt="Intercâmbista Dilmar no Canadá">
+            <img class="depoimentos_img" src="fotos/Dilmar.jpeg" alt="Intercâmbista Dilmar no Canadá">
             <figcaption>Canadá</figcaption>
           </figure>
           <p><em>"A experiência de conhecer o Canadá e viajar por ele é unica, um país completamente diferente geograficamente, com outra cultura, culinária e língua."</em></p>
@@ -109,7 +109,7 @@
       <blockquote>
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Gustavo.jpeg" alt="Intercâmbista Gustavo na Nova Zelândia">
+            <img class="depoimentos_img" src="fotos/Gustavo.jpeg" alt="Intercâmbista Gustavo na Nova Zelândia">
             <figcaption>Nova Zelândia</figcaption>
           </figure>
           <p><em>"Fazer um intercâmbio na Nova Zelândia é uma experiência incrível e enriquecedora. É uma oportunidade
@@ -123,7 +123,7 @@
       <blockquote>
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Isabel.jpeg" alt="Intercâmbista Isabel na Nova Zelândia">
+            <img class="depoimentos_img" src="fotos/Isabel.jpeg" alt="Intercâmbista Isabel na Nova Zelândia">
             <figcaption>Nova Zelândia e Índia</figcaption>
           </figure>
           <p><em>"O intercâmbio foi a coisa mais inesperado da minha vida. Nunca imaginei que um dia poderia viver tanto
@@ -140,7 +140,7 @@
       <blockquote>
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Otavio.jpeg" alt="Intercâmbista Otávio no Canadá">
+            <img class="depoimentos_img" src="fotos/Otavio.jpeg" alt="Intercâmbista Otávio no Canadá">
             <figcaption>Canadá</figcaption>
           </figure>
           <p><em>"Durante seis meses, tive a oportunidade de viver em outro país e mergulhar em uma cultura
@@ -155,7 +155,7 @@
       <blockquote>
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Pedro.jpeg" alt="Intercâmbista Pedro na Austrália">
+            <img class="depoimentos_img" src="fotos/Pedro.jpeg" alt="Intercâmbista Pedro na Austrália">
             <figcaption>Austrália</figcaption>
           </figure>
           <p><em>"Conhecer a Austrália sem dúvida foi inesquecível, vivi mais em 6 meses lá do que 16 anos no Brasil,
@@ -168,7 +168,7 @@
       <blockquote>
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Ronaldo.jpeg" alt="Intercâmbista Ronanaldo na Austrália">
+            <img class="depoimentos_img" src="fotos/Ronaldo.jpeg" alt="Intercâmbista Ronanaldo na Austrália">
             <figcaption>Austrália</figcaption>
           </figure>
           <p><em>"Durante meus seis meses em Hobart, Tasmânia, tive uma experiência intensa e enriquecedora, tanto nos
@@ -184,7 +184,7 @@
       <blockquote>
         <div class="content">
           <figure>
-            <img class="depoimentos_img" src="Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
+            <img class="depoimentos_img" src="fotos/Sibelly_.jpeg" alt="Intercâmbista Sibelly na Nova Zelândia">
             <figcaption>Nova Zelândia</figcaption>
           </figure>
           <p><em>"Realmente é incrível fazer um intercâmbio! Ganhamos conhecimento e aprendemos ser mais independentes,
@@ -239,11 +239,11 @@
           by Sibelly</strong></h2>
       <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
       <div class="redes-sociais">
-        <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
+        <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="fotos/facebook.png"
             alt="Facebook"></a>
-        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-        <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
-        <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+        <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="fotos/instagram.png" alt="Instagram"></a>
+        <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="fotos/tiktok.png" alt="Tiktok"></a>
+        <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="fotos/youtube.png" alt="YouTube"></a>
       </div>
       <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
     </footer>
