--- a/prepare-se.html
+++ b/prepare-se.html
@@ -75,7 +75,7 @@
           <button class="botao"><a href="gramatica.html">Estude gramática</a></button>
         </div>
 
-        <img src="study.gif" alt="Bart Simpson estudando">
+        <img src="fotos/study.gif" alt="Bart Simpson estudando">
 
       </li>
 
@@ -85,7 +85,7 @@
           clima. São fatores que irão te ajudar a saber mais sobre o país que irá fazer intercâmbio, até mesmo ajudar a
           preparar a mala com as roupas adequadas.</p>
 
-        <img src="cultura.gif" alt="Gif dos soldados do Reino Unido marchando">
+        <img src="fotos/cultura.gif" alt="Gif dos soldados do Reino Unido marchando">
 
       </li>
 
@@ -95,7 +95,7 @@
           moradia, e alimentação caso ficar em um dormitório sozinho. Fique ligado na mensalidade da escola ou
           faculdade. Levar dinheiro extra para fazer compras, para comprar lembrancinhas.</p>
 
-        <img src="money.gif" alt="Pernalonga contando dinheiro">
+        <img src="fotos/money.gif" alt="Pernalonga contando dinheiro">
 
       </li>
 
@@ -104,7 +104,7 @@
         <p>Entre em contato com a sua escola ou faculdade para mais informações, como regras, horários, se é obrigatório
           o uso de uniforme, fique antenado no que está acontecento, como eventos.</p>
 
-        <img src="university.gif" alt="Gif da Universidade de Harvard">
+        <img src="fotos/university.gif" alt="Gif da Universidade de Harvard">
 
       </li>
 
@@ -113,7 +113,7 @@
         <p>Antes da viagem certifique-se onde você vai ficar, veja a localização de sua moradia. Possívelmente a escola
           irá te enviar um email sobre as informações de sua host family.</p>
 
-        <img src="dormitorio.gif" alt="Gif de um dormitório">
+        <img src="fotos/dormitorio.gif" alt="Gif de um dormitório">
 
       </li>
 
@@ -125,7 +125,7 @@
           passaporte e documentos em um lugar acessível. E líquidos acima de 100ml devem ser colocados na mala de
           despacho.</p>
 
-        <img src="malas.gif" alt="Mikey Mouse fazendo as malas">
+        <img src="fotos/malas.gif" alt="Mikey Mouse fazendo as malas">
 
       </li>
 
@@ -134,7 +134,7 @@
         <p>Chegue mais cedo ao aeroporto para fazer o check-in e verificar o portão de embarque. Fique atento a todas as informações do voo, como possíveis cancelamentos ou atrasos.Tenha seus documentos e passagens sempre à mão, seja em papel ou digital. Compre um lanche ou leve algo de casa, já que as opções no aeroporto costumam ser caras.</p>
         <p>Leve algo para se distrair enquanto aguarda, como um livro, música ou filme. Use aplicativos da companhia aérea para acompanhar atualizações do voo em tempo real. Se tiver voos de conexão, confira o tempo disponível entre eles e a localização dos portões.</p>
 
-        <img src="aeroporto.gif" alt="Gif de um aeroporto">
+        <img src="fotos/aeroporto.gif" alt="Gif de um aeroporto">
 
       </li>
     </ul>
@@ -145,11 +145,11 @@
         by Sibelly</strong></h2>
     <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
     <div class="redes-sociais">
-      <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
+      <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="fotos/facebook.png"
           alt="Facebook"></a>
-      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
-      <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="fotos/instagram.png" alt="Instagram"></a>
+      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="fotos/tiktok.png" alt="Tiktok"></a>
+      <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="fotos/youtube.png" alt="YouTube"></a>
     </div>
     <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
   </footer>
