--- a/sobre.html
+++ b/sobre.html
@@ -56,7 +56,7 @@
   </div>
 
   <div class="apresentacao">
-    <img class="img-inicio esquerda" src="Foto com bandeira.jpeg" alt="Imagem da criadora do site">
+    <img class="img-inicio esquerda" src="fotos/Foto com bandeira.jpeg" alt="Imagem da criadora do site">
     <p class="direita">Olá! Meu nome é Sibelly e tenho 18 anos. Em 2022, fui uma das participantes do <strong>Ganhando o Mundo 2ª
         Edição</strong>, uma oportunidade única destinada a 100 alunos de escolas públicas do Paraná. Essa experiência
       me levou a um intercâmbio de três meses na deslumbrante Nova Zelândia. Desde os meus 11 anos, nutria o sonho de
@@ -175,11 +175,11 @@
         by Sibelly</strong></h2>
     <p>Siga as minhas redes sociais para saber mais sobre intercâmbios</p>
     <div class="redes-sociais">
-      <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="facebook.png"
+      <a href="https://www.facebook.com/sibellyvitoria.antonio" target="_blank"><img src="fotos/facebook.png"
           alt="Facebook"></a>
-      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="tiktok.png" alt="Tiktok"></a>
-      <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+      <a href="https://www.instagram.com/sibellyvi/" target="_blank"><img src="fotos/instagram.png" alt="Instagram"></a>
+      <a href="https://www.tiktok.com/@sibellyvi?is_from_webapp=1&sender_device=pc" target="_blank"><img src="fotos/tiktok.png" alt="Tiktok"></a>
+      <a href="https://www.youtube.com/@sibellyvi/featured" target="_blank"><img src="fotos/youtube.png" alt="YouTube"></a>
     </div>
     <p class="copyright">&copy; Copyright Dicas de intercâmbio - 2023-2025</p>
   </footer>
